[gd_scene load_steps=6 format=2]

[ext_resource path="res://GUI/Menus/BaseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUI/Menus/Scripts/OptionMenu.gd" type="Script" id=2]
[ext_resource path="res://GUI/Theme/Slider/HSlider.tscn" type="PackedScene" id=3]
[ext_resource path="res://Engine/Font/normal/normal_8px.tres" type="DynamicFont" id=4]
[ext_resource path="res://GUI/Theme/Checkbox/CheckBox.tscn" type="PackedScene" id=5]

[node name="OptionMenu" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="title" parent="." index="1"]
text = ""

[node name="Musik" parent="Optionbuttons" index="0" instance=ExtResource( 3 )]
editor/display_folded = true
margin_left = 167.0
margin_top = 13.0
margin_right = 320.0
margin_bottom = 18.0
min_value = -80.0
max_value = 24.0
ticks_on_borders = true

[node name="Label2" type="Label" parent="Optionbuttons/Musik" index="0"]
margin_left = -112.0
margin_top = -2.0
margin_right = -52.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 4 )

[node name="effekte" parent="Optionbuttons" index="1" instance=ExtResource( 3 )]
editor/display_folded = true
margin_left = 167.0
margin_top = 23.0
margin_right = 320.0
margin_bottom = 28.0
min_value = -80.0
max_value = 24.0
ticks_on_borders = true

[node name="Label2" type="Label" parent="Optionbuttons/effekte" index="0"]
margin_left = -112.0
margin_top = -2.0
margin_right = -52.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 4 )

[node name="Showfps" parent="Optionbuttons" index="2" instance=ExtResource( 5 )]
editor/display_folded = true
margin_left = 179.0
margin_top = 43.0
margin_right = 186.0
margin_bottom = 50.0

[node name="Label3" type="Label" parent="Optionbuttons/Showfps" index="0"]
margin_left = -124.0
margin_top = -1.0
margin_right = -64.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 4 )

[node name="Fullscreen" parent="Optionbuttons" index="3" instance=ExtResource( 5 )]
editor/display_folded = true
margin_left = 179.0
margin_top = 54.0
margin_right = 186.0
margin_bottom = 61.0

[node name="Label3" type="Label" parent="Optionbuttons/Fullscreen" index="0"]
margin_left = -124.0
margin_top = -1.0
margin_right = -64.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 4 )

[node name="Borderless" parent="Optionbuttons" index="4" instance=ExtResource( 5 )]
editor/display_folded = true
margin_left = 179.0
margin_top = 65.0
margin_right = 186.0
margin_bottom = 72.0

[node name="Label3" type="Label" parent="Optionbuttons/Borderless" index="0"]
margin_left = -124.0
margin_top = -1.0
margin_right = -64.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 4 )

[node name="Vsync" parent="Optionbuttons" index="5" instance=ExtResource( 5 )]
editor/display_folded = true
margin_left = 179.0
margin_top = 76.0
margin_right = 186.0
margin_bottom = 83.0

[node name="Label3" type="Label" parent="Optionbuttons/Vsync" index="0"]
margin_left = -124.0
margin_top = -1.0
margin_right = -64.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 4 )

[node name="autosave" parent="Optionbuttons" index="6" instance=ExtResource( 5 )]
editor/display_folded = true
margin_left = 179.0
margin_top = 87.0
margin_right = 186.0
margin_bottom = 94.0

[node name="Label3" type="Label" parent="Optionbuttons/autosave" index="0"]
margin_left = -124.0
margin_top = -1.0
margin_right = -64.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 4 )

[node name="Tileset" parent="." index="3"]
editor/display_folded = false
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="value_changed" from="Optionbuttons/Musik" to="." method="_on_Musik_value_changed"]
[connection signal="value_changed" from="Optionbuttons/effekte" to="." method="_on_effekte_value_changed"]
[connection signal="toggled" from="Optionbuttons/Showfps" to="." method="_on_Showfps_toggled"]
[connection signal="toggled" from="Optionbuttons/Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="toggled" from="Optionbuttons/Borderless" to="." method="_on_Borderless_toggled"]
[connection signal="toggled" from="Optionbuttons/Vsync" to="." method="_on_Vsync_toggled"]
[connection signal="toggled" from="Optionbuttons/autosave" to="." method="_on_autosave_toggled"]
